--- a/styles/style.css
+++ b/styles/style.css
@@ -9,10 +9,10 @@ body{
   font-weight: bold;
 }
 
-#map{
-    width: 100%; 
-    height: 750px !important;
-    z-index: -1;
+#mapid{
+    float: left;
+    max-width: 70%; 
+    min-height: 50em !important;
 }
 
 .map-overlay {
@@ -30,3 +30,30 @@ body{
   }
 
 h1 { font-family: "Segoe UI", Frutiger, "Frutiger Linotype", "Dejavu Sans", "Helvetica Neue", Arial, sans-serif; font-size: 24px; font-style: normal; font-variant: normal; font-weight: 700; line-height: 26.4px; } h3 { font-family: "Segoe UI", Frutiger, "Frutiger Linotype", "Dejavu Sans", "Helvetica Neue", Arial, sans-serif; font-size: 14px; font-style: normal; font-variant: normal; font-weight: 700; line-height: 15.4px; } p { font-family: "Segoe UI", Frutiger, "Frutiger Linotype", "Dejavu Sans", "Helvetica Neue", Arial, sans-serif; font-size: 14px; font-style: normal; font-variant: normal; font-weight: 400; line-height: 20px; } blockquote { font-family: "Segoe UI", Frutiger, "Frutiger Linotype", "Dejavu Sans", "Helvetica Neue", Arial, sans-serif; font-size: 21px; font-style: normal; font-variant: normal; font-weight: 400; line-height: 30px; } pre { font-family: "Segoe UI", Frutiger, "Frutiger Linotype", "Dejavu Sans", "Helvetica Neue", Arial, sans-serif; font-size: 13px; font-style: normal; font-variant: normal; font-weight: 400; line-height: 18.5714px; }
+
+#information{
+  float: left;
+}
+
+/* SIDEPANEL */
+.sidepanel{
+  float: left;
+  min-width: 17.5em;
+  min-height: 37.5em;
+  background-color: red;
+  overflow: hidden;
+}
+
+.sidepanel .selection{
+  float: left;
+  margin: 0.5em;
+  width: 100%;
+  background-color: blue;
+}
+.sidepanel .selection input{
+  float: left;
+  width: 90%;
+  padding: 6px;
+  font-size: 17px;
+  border: none;
+}
