--- a/styles/style.css
+++ b/styles/style.css
@@ -12,7 +12,7 @@ body{
 #mapid{
     margin:0;
     float: right;
-    max-width: 131.5em; 
+    max-width: 73%; 
     min-height: 50em !important;
 }
 
