--- a/styles/style.css
+++ b/styles/style.css
@@ -66,3 +66,10 @@ h1 { font-family: "Segoe UI", Frutiger, "Frutiger Linotype", "Dejavu Sans", "Hel
   font-size: 17px;
   border: none;
 }
+
+#information{
+  font: 12px/20px 'Segoe UI', Arial, Helvetica, sans-serif;
+}
+#information p{
+  margin: 2px;
+}
