--- a/styles/style.css
+++ b/styles/style.css
@@ -73,3 +73,73 @@ h1 { font-family: "Segoe UI", Frutiger, "Frutiger Linotype", "Dejavu Sans", "Hel
 #information p{
   margin: 2px;
 }
+
+
+/* // DROPDOWN CHECKBOX \\ */
+
+.dropdown-check-list{
+  float: left;
+  margin: 0.5em;
+  font-family:'Segoe UI', Arial, Helvetica, sans-serif;
+  font-size: 17px;
+  max-width: 100%;
+  border-radius: 3px;
+}
+
+.dropdown-check-list .itemsContainer{
+  max-height: 20em;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  max-width: 98%;
+}
+
+.dropdown-check-list .anchor {
+  position: relative;
+  cursor: pointer;
+  display: inline-block;
+  min-width: 13.8em;
+  padding: 5px 50px 5px 10px;
+  border: 1px solid #ccc;
+  background-color: white;
+}
+
+.dropdown-check-list .anchor:after {
+  position: absolute;
+  content: "";
+  border-left: 2px solid black;
+  border-top: 2px solid black;
+  padding: 5px;
+  right: 10px;
+  top: 20%;
+  -moz-transform: rotate(-135deg);
+  -ms-transform: rotate(-135deg);
+  -o-transform: rotate(-135deg);
+  -webkit-transform: rotate(-135deg);
+  transform: rotate(-135deg);
+}
+
+.dropdown-check-list .anchor:active:after {
+  right: 8px;
+  top: 21%;
+}
+
+.dropdown-check-list ul.items {
+  padding: 2px;
+  display: none;
+  margin: 0;
+  margin-right: 1.8em;
+  border: 1px solid #ccc;
+  border-top: none;
+  color: black;
+  background-color: white;
+  font-size: 15px;
+  min-width: 100%;
+}
+
+.dropdown-check-list ul.items li {
+  list-style: none;
+}
+
+.dropdown-check-list.visible .items {
+  display: block;
+}
