--- a/styles/style.css
+++ b/styles/style.css
@@ -143,3 +143,7 @@ h1 { font-family: "Segoe UI", Frutiger, "Frutiger Linotype", "Dejavu Sans", "Hel
 .dropdown-check-list.visible .items {
   display: block;
 }
+
+#showing{
+  float: right;
+}
