Riksintresset kommer upp i result-table om den highlightas på kartan.

--- a/styles/style.css
+++ b/styles/style.css
@@ -35,6 +35,9 @@ body{
   margin-top: 0 !important;
   margin-bottom: 0 !important;
 }
+.popup a{
+  cursor: pointer;
+}
 .popup .name {
   font-weight: bold;
 }
