--- a/styles/style.css
+++ b/styles/style.css
@@ -139,7 +139,7 @@ pre {
 
 .sidepanel .selection input {
   float: left;
-  min-width: 25.8em;
+  min-width: 90.7%;
   padding: 6px;
   font-size: 17px;
   border: solid #444;
@@ -153,7 +153,7 @@ pre {
 
 .sidepanel select {
   float: left;
-  width: 26.9em;
+  width: 94%;
   padding: 6px;
   font-size: 17px;
   border: solid #444;
@@ -181,16 +181,16 @@ pre {
   font-family: 'Segoe UI', Arial, Helvetica, sans-serif;
   font-size: 17px;
   max-width: 100%;
-  min-width: 97%;
+  min-width: 95%;
   border-radius: 3px;
   z-index: 2;
 }
 
 .dropdown-check-list .itemsContainer {
-  max-height: 30em;
+  max-height: 54vh;
   overflow-y: scroll;
   overflow-x: hidden;
-  max-width: 97%;
+  max-width: 98.5%;
   z-index: 99;
 }
 
@@ -198,7 +198,7 @@ pre {
   position: relative;
   cursor: pointer;
   display: inline-block;
-  min-width: 22.95em;
+  min-width: 85%;
   padding: 5px 50px 5px 10px;
   border: solid #444;
   background-color: white;
@@ -368,25 +368,34 @@ pre {
   .content {
     width: 27.25em;
   }
+  #result-table{
+    max-height: 56%;
+  }
 }
 
 @media screen and (max-width: 992px) {
   .sidepanel {
-    max-width: 27em;
-  }
-  .dropdown-check-list {
-    min-width: 94.2%;
-  }
-  .content {
-    width: 23.5em;
+    max-width: 40%;
   }
 
+  .sidepanel .selection input{
+    min-width: 90%;
+  }
+  .dropdown-check-list .anchor {
+    min-width: 80%;
+  }
+  .content {
+    width: 93.8%;
+  }
   .collapsible{
-    min-width: 26.5em;
+    min-width: 100%;
+  }
+  .dropdown-check-list .anchor{
+    min-width: 81.8%;
   }
   #result-table{
-    min-width: 25.5em;
-    max-width: 25.5em;
-    padding-right: 1.5em;
+    max-width: 37%;
+    padding-right: 3%;
+    max-height: 50%;
   }
 }
