--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,6 @@
 html, body {
   height: 96.7%;
+  font-family: 'Arial','Segoe UI', Helvetica, sans-serif;
 }
 
 body {
@@ -57,7 +58,7 @@ body {
 }
 
 .map-overlay {
-  font: 12px/20px 'Segoe UI', Arial, Helvetica, sans-serif;
+  font: 12px/20px 'Arial','Segoe UI', Helvetica, sans-serif;
   background-color: #fff;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
   border-radius: 3px;
@@ -71,7 +72,6 @@ body {
 }
 
 h1 {
-  font-family: "Segoe UI", Frutiger, "Frutiger Linotype", "Dejavu Sans", "Helvetica Neue", Arial, sans-serif;
   font-size: 24px;
   font-style: normal;
   font-variant: normal;
@@ -80,7 +80,6 @@ h1 {
 }
 
 h3 {
-  font-family: "Segoe UI", Frutiger, "Frutiger Linotype", "Dejavu Sans", "Helvetica Neue", Arial, sans-serif;
   font-size: 14px;
   font-style: normal;
   font-variant: normal;
@@ -89,7 +88,6 @@ h3 {
 }
 
 p {
-  font-family: "Segoe UI", Frutiger, "Frutiger Linotype", "Dejavu Sans", "Helvetica Neue", Arial, sans-serif;
   font-size: 14px;
   font-style: normal;
   font-variant: normal;
@@ -98,7 +96,6 @@ p {
 }
 
 blockquote {
-  font-family: "Segoe UI", Frutiger, "Frutiger Linotype", "Dejavu Sans", "Helvetica Neue", Arial, sans-serif;
   font-size: 21px;
   font-style: normal;
   font-variant: normal;
@@ -107,7 +104,6 @@ blockquote {
 }
 
 pre {
-  font-family: "Segoe UI", Frutiger, "Frutiger Linotype", "Dejavu Sans", "Helvetica Neue", Arial, sans-serif;
   font-size: 13px;
   font-style: normal;
   font-variant: normal;
@@ -141,7 +137,7 @@ pre {
 
 .sidepanel .selection input {
   float: left;
-  min-width: 92%;
+  min-width: 91.6%;
   padding: 6px;
   padding-right: 0;
   font-size: 17px;
@@ -171,7 +167,7 @@ pre {
 }
 
 #information {
-  font: 12px/20px 'Segoe UI', Arial, Helvetica, sans-serif;
+  font: 12px/20px 'Arial','Segoe UI', Arial, Helvetica, sans-serif;
 }
 
 #information p {
@@ -182,11 +178,10 @@ pre {
 .dropdown-check-list {
   position: relative;
   float: left;
-  margin: 0.5em;
-  font-family: 'Segoe UI', Arial, Helvetica, sans-serif;
+  margin: 0.45em;
   font-size: 17px;
   max-width: 100%;
-  min-width: 95%;
+  min-width: 96.1%;
   border-radius: 3px;
   z-index: 2;
 }
@@ -204,7 +199,7 @@ pre {
   cursor: pointer;
   display: inline-block;
   min-width: 85%;
-  padding: 5px 50px 5px 10px;
+  padding: 5px 50px 5px 5px;
   border: solid #444;
   background-color: white;
   border-radius: 2px;
